# ChaosAgentGym-Forge

./: .gitignore  Blog.md  README.md  requirements.txt
env/: __init__.py  chaos_env.py  chaos_injector.py  mock_api.py  smoke_test.py  tasks.py  test_tasks.py
eval/: __init__.py  before_after.py  behavior_diff.py  plot_rewards.py  quantitative.py
frontend/: app.js  env.js  index.html  policies.js  styles.css
logs/: before_after.md  behavior_diff.md  quantitative.json  quantitative.md  rewards.csv
notebooks/: colab_train.ipynb  slides.md
openenv_chaos/: README.md  __init__.py  client.py  openenv.yaml  pyproject.toml  test_smoke.py
openenv_chaos/server/: Dockerfile  __init__.py  app.py  chaos_environment.py
training/: __init__.py  make_demo_dataset.py  policies.py  rollout.py  sft_warmup.py  test_pipeline.py  train.py  train_trl.py  train_trl_sft.py
